--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@shopify/restyle": "^2.4.2",
+    "axios": "^1.6.5",
     "react": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-native": "0.71.8",
