--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.1",
     "react-native-svg": "^13.9.0",
-    "zod": "^3.22.1"
+    "zod": "^3.22.1",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
